fix text input height to prevent flickering

--- a/app/assets/stylesheets/kuhsaft/cms/application.css.sass
+++ b/app/assets/stylesheets/kuhsaft/cms/application.css.sass
@@ -174,11 +174,12 @@ form
     top: 7px
     right: 15px
 
-textarea.ckeditor
-  height: 263px
-  display: block !important
-  visibility: show !important
-  position: absolute
+.control-group.text
+  height: 296px
+
+  textarea
+    height: 263px
+    width: 98%
 
 @import nestable
 @import bootstrap-responsive
